# IICPC

./: .gitignore  .replit  CLAUDE_PLAN.md  Cargo.toml  DATA_SOURCES.md  FUNDAMENTAL_METRICS.md  IDEA.txt  IICPC_Plan_Proposal.md  IMPLEMENTATION_PLAN.md  POST_MVP_PLAN.md  PRE-TESTING_CHECKLIST.md  README.md  SENTIMENT_METRICS.md  TECHNICAL_METRICS.md  TESTING_GUIDE.md  architecture.txt  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
.agents/memory/: MEMORY.md  clerk-css-import.md  function-def-mapping.md  simulated-test-runs.md  vite-tailwind-clerk.md
.corepack/: lastKnownGood.json
.corepack/v1/pnpm/11.5.3/: .corepack
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts  index.ts
artifacts/api-server/src/lib/: executionSimulator.ts  marketDataFetcher.ts  orchestrator.ts  paperTradingSimulator.ts  realtime.ts  rustPipelineBridge.ts  websocket.ts
artifacts/api-server/src/lib/bots/: fundamentalBot.ts  sentimentBot.ts  technicalBot.ts
artifacts/api-server/src/routes/: botfleet.ts  executions.ts  functions.ts  index.ts  leaderboard.ts  marketData.ts  paperTrading.ts  pipeline.ts  profile.ts  submissions.ts
artifacts/api-server/src/types/: express.d.ts
artifacts/iicpc-platform/: index.html  package.json  tsconfig.json  vite.config.ts
artifacts/iicpc-platform/.replit-artifact/: artifact.toml
artifacts/iicpc-platform/src/: App.tsx  index.css
artifacts/iicpc-platform/src/components/: FunctionCatalog.tsx
artifacts/iicpc-platform/src/components/layout/: app-sidebar.tsx
artifacts/iicpc-platform/src/hooks/: useWebSocket.ts
artifacts/iicpc-platform/src/lib/: api.ts  starterStrategy.ts
artifacts/iicpc-platform/src/pages/: editor.tsx  home.tsx  leaderboard.tsx  learn.tsx  not-found.tsx  paper-trading.tsx  profile.tsx
artifacts/mockup-sandbox/: vite.config.ts
artifacts/mockup-sandbox/src/.generated/: mockup-components.ts
artifacts/mockup-sandbox/src/components/mockups/landing-gradient/: Gradient.tsx
artifacts/mockup-sandbox/src/components/mockups/landing-minimal/: Minimal.tsx
artifacts/mockup-sandbox/src/components/mockups/landing-terminal/: Terminal.tsx  _group.css
attached_assets/: IICPC_Revised_Plan_1780335915613.md
config/: README.md  bot_weights.yaml  kafka_topics.yaml
infrastructure/: README.md
infrastructure/docker/: api-server.Dockerfile  docker-compose.yaml  frontend.Dockerfile  nginx.conf  rust-service.Dockerfile
infrastructure/kubernetes/: configmap.yaml  ingress.yaml
infrastructure/kubernetes/base/: namespace.yaml  rbac.yaml
infrastructure/kubernetes/bots/: deployments.yaml  hpa.yaml  services.yaml
infrastructure/kubernetes/kafka/: cluster.yaml  topics.yaml
infrastructure/kubernetes/timescale/: init.sql  statefulset.yaml
infrastructure/scripts/: deploy.sh
lib/api-spec/: openapi.yaml
lib/db/src/schema/: assetScores.ts  botEvents.ts  functions.ts  historicalPrices.ts  index.ts  paperTradePositions.ts  submissions.ts  testRuns.ts  testRunsDetailed.ts  users.ts
libs/: README.md
libs/db-client/: Cargo.toml
libs/db-client/src/: lib.rs
libs/eval-algorithms/: Cargo.toml
libs/eval-algorithms/src/: lib.rs
libs/kafka-utils/: Cargo.toml
libs/kafka-utils/src/: lib.rs
libs/platform-types/: Cargo.toml
libs/platform-types/src/: lib.rs
libs/strategy-parser/: Cargo.toml
libs/strategy-parser/src/: lib.rs
scripts/: package.json  test-pipeline.sh
scripts/src/: seed-functions.ts
services/: README.md
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/execution-sim/: Cargo.toml
services/execution-sim/src/: main.rs
services/fundamental-agents/: Cargo.toml
services/fundamental-agents/src/: main.rs
services/paper-trading/: Cargo.toml
services/paper-trading/src/: main.rs
services/sentiment-agents/: Cargo.toml
services/sentiment-agents/src/: main.rs
services/technical-agents/: Cargo.toml
services/technical-agents/src/: main.rs
services/telemetry-judge/: Cargo.toml
services/telemetry-judge/src/: main.rs
