[package]
name = "db-client"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
platform-types = { path = "../platform-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[lib]
path = "src/lib.rs"
