[package]
name = "api-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
platform-types = { path = "../../libs/platform-types" }
eval-algorithms = { path = "../../libs/eval-algorithms" }
kafka-utils = { path = "../../libs/kafka-utils" }
db-client = { path = "../../libs/db-client" }
strategy-parser = { path = "../../libs/strategy-parser" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[[bin]]
name = "api-gateway"
path = "src/main.rs"
