[package]
name = "fundamental-agents"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
eval-algorithms = { path = "../../libs/eval-algorithms" }
platform-types = { path = "../../libs/platform-types" }

[[bin]]
name = "fundamental-agents"
path = "src/main.rs"
